[package]
name = "snp_report_spider"
version = "1.0.0"
edition = "2024"

[dependencies]
reqwest = "0.12.22"
tokio = { version = "1.47.1", features = ["rt", "rt-multi-thread", "macros"] }
csv = "1.3.1"
scraper = "0.23.1"
regex = "1.11.1"

[profile.release]
opt-level = 3      # 优化目标：最大执行速度
lto = "fat"        # 启用最激进的链接时优化
codegen-units = 1  # 减少代码生成单元数量，提高优化效果
panic = "abort"    # 使用"abort"而非"unwind"处理恐慌
strip = "debuginfo"
